[metadata]
name = lazyins
version = 0.0.3
author = Keita Mizukoshi
author_email = keita@mzks.dev
description = A stupid MySQL insert helper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mzks/lazyins
project_urls =
    Bug Tracker = https://github.com/mzks/lazyins/issue
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
